--- a/views/pokemon/index.erb
+++ b/views/pokemon/index.erb
@@ -1,5 +1,5 @@
 <h2> All Pokemon </h2>
 <%  @pokemons.each do |pokemon| %>
     <div class = "pokemon">
-      <p><a href= '/pokemons/<%= pokemon.id%>' > <%= pokemon.name %></a></li>
+      <p><a href= '/pokemons/<%= pokemon.id%>' > <%= pokemon.name %></a></p>
     <% end %>
