views pokemons fix

--- a/views/pokemons/show.erb
+++ b/views/pokemons/show.erb
@@ -1,1 +1,4 @@
 <h2> <%= @pokemons.name %> </h2>
+<p> Pokemon Type: <%= @pokemons.poke_type %></p>
+<p>  CP: <%= @pokemons.cp %></p>
+<p> img: <%= @pokemons.img_url %></p>
