--- a/views/pokemons/index.erb
+++ b/views/pokemons/index.erb
@@ -1,4 +1,6 @@
 <h2> All Pokemon </h2>
+<div class = "pokemons">
 <%  @pokemons.each do |pokemon| %>
-    <p><a href= '/pokemons/<%= pokemon.id%>' > <%= pokemons.name %></a></li>
-    <% end %>
+  <p><a href= '/pokemons/<%= pokemon.id%>' > <%= pokemon.name %></a></p>
+<% end %>
+</div>
