--- a/views/pokemons/index.erb
+++ b/views/pokemons/index.erb
@@ -4,3 +4,4 @@
   <p><a href= '/pokemons/<%= pokemon.id%>' > <%= pokemon.name %></a></p>
 <% end %>
 </div>
+<p><a href = '/pokemons/new'> Add New Pokemon</a></p>
