--- a/views/pokemons/new.erb
+++ b/views/pokemons/new.erb
@@ -1,9 +1,13 @@
 <h2> Add New Pokemon</h2>
-<form action= "pokemons" method="post">
+<form action= "/pokemons" method="post">
+
   <label>Name</label>
-  <input type = "text" name="pokemon[name]" value= "">
-  <label></label>
-  <input type = "text" name="pokemon[poke_type]" value= "">
-  <label></label>
-  <input type = "text" name="pokemon[cp]" value= "">
+  <input type = "text" name="pokemon[name]" >
+
+  <label>Pokemon Type</label>
+  <input type = "text" name="pokemon[poke_type]" >
+
+  <label>Pokemon CP</label>
+  <input type = "text" name="pokemon[cp]" >
+  <input type="submit" value= "Add New Pokemon">
 </form>
