--- a/views/pokemons/show.erb
+++ b/views/pokemons/show.erb
@@ -2,3 +2,5 @@
 <p> Pokemon Type: <%= @pokemons.poke_type %></p>
 <p>  CP: <%= @pokemons.cp %></p>
 <p> img: <%= @pokemons.img_url %></p>
+
+<h3> <a href='/pokemons/<%= @pokemons.id %>/edit'>Edit Pokemon</a></h3>
