--- a/views/pokemons/show.erb
+++ b/views/pokemons/show.erb
@@ -1,6 +1,6 @@
 <h2> <%= @pokemons.name %> </h2>
 <p> Pokemon Type: <%= @pokemons.poke_type %></p>
 <p>  CP: <%= @pokemons.cp %></p>
-<p> img: <%= @pokemons.img_url %></p>
+<img src='<%= @pokemons.img_url %>'>
 
 <h3> <a href='/pokemons/<%= @pokemons.id %>/edit'>Edit Pokemon</a></h3>
