--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="/css/pokestyle.css" media="screen" title="no title">
 <title>Pokenatra</title>
 </head>
 
